--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
     </section>
   </template>
 
-  <skript src ="js/main.js"></skript>
-
+  <sсript src="./js/main.js" type="module"></sсript>
 </body>
 </html>
