--- a/index.html
+++ b/index.html
@@ -165,6 +165,6 @@
     </section>
   </template>
 
-  <sсript src="./js/main.js" type="module"></sсript>
+  <script src="js/main.js" type="module"></script>
 </body>
 </html>
