--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="vendor/nouislider/nouislider.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кекстаграм</title>
 </head>
@@ -105,10 +106,15 @@
 
                 <!-- Добавление комментария к изображению -->
                 <fieldset class="img-upload__text text">
-                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..." required minlength="20" maxlength="140"
+                    <!--
+                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..." required
+                    minlength="20" maxlength="180"
                     data-pristine-required-message="Обязательное поле"
                     data-pristine-minlength-message="Минимальная длина 20 символов"
                     data-pristine-maxlength-message="Максимальная длина 140 символов"></textarea>
+                    -->
+                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..." required
+                    data-pristine-required-message="Обязательное поле"></textarea>
                 </fieldset>
 
                 <!-- Кнопка для отправки данных на сервер -->
@@ -168,7 +174,8 @@
     </section>
   </template>
 
-  <script src="./vendor/pristine/pristine.min.js" type="module"></script>
+  <script src="./vendor/nouislider/nouislider.js" type="text/javascript"></script>
+  <script src="./vendor/pristine/pristine.min.js" type="text/javascript"></script>
   <script src="js/main.js" type="module"></script>
 </body>
 </html>
